fixing weird spacing issue in crud

--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,3 @@ ul.tag li a {
 .footer address a {
     color: #f37c6b;
 }
-
-#main-content {
-    margin-left: 225px;
-}
-
